# ascend

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: test.yml
ai-sync/: README.md  pyproject.toml
ai-sync/ascend_sync/: __init__.py  cli.py  conflict_classifier.py  drift_detector.py  llm_resolver.py  pr_orchestrator.py  verifier.py
ai-sync/benchmarks/: classifier_benchmark.py
ai-sync/examples/: example_sync.py
ai-sync/tests/: test_classifier.py  test_cli.py  test_drift_detector.py  test_llm_resolver.py  test_pr_orchestrator.py  test_verifier.py
docs/: _config.yml  adoption-guide.md  api-reference.md  architecture.md  case-study-ai-cve-dependency.md  compliance-mapping.md  glossary.md  index.md  metrics-and-kpis.md  migration-guide.md  quality-gates.md  threat-model.md
docs/paper/: EVALUATION.md  IEEEtran.cls  README.md  REVIEWER_CHECKLIST.md  main.tex  references.bib
evaluation/: README.md  aggregate-metrics.csv  expected-synthetic-output.json  paper-table9.json  requirements.txt  results.json  statistics.py
examples/: README.md
examples/conflict-fixtures/: 01-syntactic-whitespace.json  02-syntactic-import-reorder.json  03-semantic-auth-logic.json  04-semantic-hotfix-vs-refactor.json  05-structural-class-split.json  06-configuration-yaml-values.json  07-configuration-env-new-keys.json  README.md  expected-results.json  run_fixtures.py
examples/sample-node-app/: .eslintrc.json  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  package.json
examples/sample-python-app/: .gitignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt
examples/terraform-baseline/: .checkov.yml  README.md  iam.tf  kms.tf  main.tf  outputs.tf  s3.tf  security_groups.tf  variables.tf  versions.tf
path/to/: file_1.py
quality-gates/: README.md  checkov-config.yml  semgrep-rules.yml  snyk.example  sonarqube-quality-gate.json  trivyignore.example  trufflehog-config.yml  zap-rules.tsv
scripts/: setup.sh  validate-config.sh
(+20 files in other folders)
