[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascend-sync"
version = "0.1.0"
description = "AI-powered post-deployment code synchronization for the ASCEND DevSecOps framework"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Venkata Pavan Kumar Gummadi", email = "venkata.p.gummadi@ieee.org" }
]
keywords = ["devsecops", "ci-cd", "ai", "merge-conflict", "drift-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "tenacity>=8.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.7",
    "hypothesis>=6.92",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
server = ["fastapi>=0.104", "uvicorn>=0.24"]

[project.scripts]
ascend-sync = "ascend_sync.cli:main"

[project.urls]
Homepage = "https://github.com/venkatapgummadi/ascend"
Repository = "https://github.com/venkatapgummadi/ascend"
Documentation = "https://github.com/venkatapgummadi/ascend/blob/main/docs/architecture.md"
Issues = "https://github.com/venkatapgummadi/ascend/issues"

[tool.setuptools.packages.find]
include = ["ascend_sync*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RUF"]
ignore = ["S101", "S301", "RUF012"]  # allow assert in tests

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=ascend_sync --cov-report=term-missing"
